docs: add swagger docs for url cleaner package
