# backend/docs/swagger.yaml
@@ -26,6 +26,19 @@ definitions:
       title:
         type: string
     type: object
+  model.URLCleanerRequest:
+    properties:
+      operation:
+        example: canonical,redirection,all
+        type: string
+      url:
+        type: string
+    type: object
+  model.URLCleanerResponse:
+    properties:
+      processed_url:
+        type: string
+    type: object
   model.UpdateBookRequest:
     properties:
       author:
@@ -190,4 +203,24 @@ paths:
       summary: Update book data by ID, return updated data
       tags:
       - books
+  /url/cleanup:
+    post:
+      parameters:
+      - description: URL to be clean and the selected operation ('canonical', 'redirection',
+          'all')
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.URLCleanerRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.URLCleanerResponse'
+      summary: Clean up URL with either canonical, redirection, or both (all) operations
+      tags:
+      - urlCleaner
 swagger: "2.0"
